applications/home-assistant/0-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: home-assistant
    labels:
        name: home-assistant
