applications/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  selector:
    app: home-assistant
  type: ExternalName
  externalName: 192.168.137.251
  ports:
    - name: http
      port: 8123
      targetPort: 8123
